--- a/css/main.css
+++ b/css/main.css
@@ -11414,6 +11414,36 @@ a:hover {
   color: #B98B82;
 }
 
+.object-fit {
+  height: 300px;
+  min-width: 100%;
+  object-fit: cover;
+}
+
+.navbar .navbar-brand {
+  font-size: 1.5em;
+}
+.navbar .navbar-toggler {
+  box-shadow: none !important;
+  border: none;
+}
+.navbar .nav-link {
+  font-size: 1.2em;
+}
+.navbar .nav-link:hover {
+  color: #fff;
+}
+
+.header {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1)), url(./../img/hamburger.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.header .hero {
+  height: 600px;
+}
+
 .card {
   border: none;
   height: 400px;
