--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,75 @@ a {
 
 
 
+// Generico
+
+.object-fit {
+    height: 300px;
+    min-width: 100%;
+    object-fit: cover;
+}
+
+
+// End Generico
+
+
+
+// Navbar
+
+.navbar {
+
+    .navbar-brand {
+        font-size: 1.5em;
+    }
+
+    .navbar-toggler {
+        box-shadow: none !important;
+        border: none;
+    }
+
+
+    .nav-link {
+        font-size: 1.2em;
+
+        &:hover {
+            color: $white;
+        }
+    }
+}
+
+// End Navbar
+
+
+// Header
+
+.header {
+
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1)), url(./../img/hamburger.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+
+    .hero {
+        height: 600px;
+    }
+
+}
+
+// End Header
+
+
+// Why
+
+.why {
+
+}
+
+// End Why
+
+
+
+
+
 
 
 
