--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,6 +80,10 @@ a {
 }
 
 
+.card {
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
 // End Generico
 
 
@@ -159,6 +163,8 @@ a {
 
 .menu-item {
     .card {
+        box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+
         img {
             height: 250px;
         }
