--- a/css/main.css
+++ b/css/main.css
@@ -11488,6 +11488,10 @@ a {
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
 }
+.menu .control {
+  width: auto;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
 
 .parallax-section {
   position: relative;
