--- a/scss/main.scss
+++ b/scss/main.scss
@@ -169,6 +169,8 @@ a {
             height: 250px;
         }
     }
+
+    
 }
 
 // End Menu item
@@ -195,6 +197,12 @@ a {
         width: 100%;
         height: 100%;
         background: rgba(0, 0, 0, 0.5); // Opacidad sobre la imagen
+    }
+
+    .control{
+        width: auto;
+        // box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
 }
 
