--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,8 @@
 // @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap');
 
 $primary: #B98B82; // Verde pino (rústico, natural)
-$complement: #F5A623; // Amarillo mostaza (calidez, contraste)
-$secondary: #2C2C2C; // Marrón cuero (robusto, terroso)
+$complement: rgb(245, 166, 35); // Amarillo mostaza (calidez, contraste)
+$secondary: rgb(44, 44, 44); // Marrón cuero (robusto, terroso)
 
 $theme-colors: (
     "primary": $primary,
@@ -83,6 +83,42 @@ a {
 .card {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
+
+
+@include media-breakpoint-up(lg) {
+
+    .w-lg-auto {
+        width: inherit;
+    }
+}
+
+
+.vibrar {
+    animation: vibrar 0.5s ease-in-out 1;
+}
+
+@keyframes vibrar {
+    0% {
+        transform: translateX(0);
+    }
+
+    25% {
+        transform: translateX(-10px);
+    }
+
+    50% {
+        transform: translateX(10px);
+    }
+
+    75% {
+        transform: translateX(-10px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 
 // End Generico
 
@@ -170,7 +206,7 @@ a {
         }
     }
 
-    
+
 }
 
 // End Menu item
@@ -199,9 +235,10 @@ a {
         background: rgba(0, 0, 0, 0.5); // Opacidad sobre la imagen
     }
 
-    .control{
+    .control {
         width: auto;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+        box-shadow: rgba(44, 44, 44, 0.3) 0px 0px 0px 3px;
+        //box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
         // box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
         //box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     }
