--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap');
 
-$primary: #B98B82; // Verde pino (rústico, natural)
+//$primary: #B98B82; // Verde pino (rústico, natural)
+$primary: #B22222;
 $complement: rgb(245, 166, 35); // Amarillo mostaza (calidez, contraste)
 $secondary: rgb(44, 44, 44); // Marrón cuero (robusto, terroso)
 
