--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,13 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #B98B82;
+  --bs-primary: #B22222;
   --bs-complement: rgb(245, 166, 35);
   --bs-secondary: rgb(44, 44, 44);
-  --bs-primary-rgb: 185, 139, 130;
+  --bs-primary-rgb: 178, 34, 34;
   --bs-complement-rgb: 245, 166, 35;
   --bs-secondary-rgb: 44, 44, 44;
-  --bs-primary-text-emphasis: rgb(74, 55.6, 52);
+  --bs-primary-text-emphasis: rgb(71.2, 13.6, 13.6);
   --bs-secondary-text-emphasis: rgb(17.6, 17.6, 17.6);
   --bs-success-text-emphasis: rgb(10, 54, 33.6);
   --bs-info-text-emphasis: rgb(5.2, 80.8, 96);
@@ -43,7 +43,7 @@
   --bs-danger-text-emphasis: rgb(88, 21.2, 27.6);
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
-  --bs-primary-bg-subtle: rgb(241, 231.8, 230);
+  --bs-primary-bg-subtle: rgb(239.6, 210.8, 210.8);
   --bs-secondary-bg-subtle: rgb(212.8, 212.8, 212.8);
   --bs-success-bg-subtle: rgb(209, 231, 220.8);
   --bs-info-bg-subtle: rgb(206.6, 244.4, 252);
@@ -51,7 +51,7 @@
   --bs-danger-bg-subtle: rgb(248, 214.6, 217.8);
   --bs-light-bg-subtle: rgb(251.5, 252, 252.5);
   --bs-dark-bg-subtle: #ced4da;
-  --bs-primary-border-subtle: rgb(227, 208.6, 205);
+  --bs-primary-border-subtle: rgb(224.2, 166.6, 166.6);
   --bs-secondary-border-subtle: rgb(170.6, 170.6, 170.6);
   --bs-success-border-subtle: rgb(163, 207, 186.6);
   --bs-info-border-subtle: rgb(158.2, 233.8, 249);
@@ -83,11 +83,11 @@
   --bs-tertiary-bg: #f8f9fa;
   --bs-tertiary-bg-rgb: 248, 249, 250;
   --bs-heading-color: inherit;
-  --bs-link-color: #B98B82;
-  --bs-link-color-rgb: 185, 139, 130;
+  --bs-link-color: #B22222;
+  --bs-link-color-rgb: 178, 34, 34;
   --bs-link-decoration: underline;
-  --bs-link-hover-color: rgb(148, 111.2, 104);
-  --bs-link-hover-color-rgb: 148, 111, 104;
+  --bs-link-hover-color: rgb(142.4, 27.2, 27.2);
+  --bs-link-hover-color-rgb: 142, 27, 27;
   --bs-code-color: #d63384;
   --bs-highlight-color: #212529;
   --bs-highlight-bg: rgb(255, 242.6, 205.4);
@@ -108,7 +108,7 @@
   --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-focus-ring-width: 0.25rem;
   --bs-focus-ring-opacity: 0.25;
-  --bs-focus-ring-color: rgba(185, 139, 130, 0.25);
+  --bs-focus-ring-color: rgba(178, 34, 34, 0.25);
   --bs-form-valid-color: #198754;
   --bs-form-valid-border-color: #198754;
   --bs-form-invalid-color: #dc3545;
@@ -131,7 +131,7 @@
   --bs-tertiary-color-rgb: 222, 226, 230;
   --bs-tertiary-bg: rgb(42.5, 47.5, 52.5);
   --bs-tertiary-bg-rgb: 43, 48, 53;
-  --bs-primary-text-emphasis: rgb(213, 185.4, 180);
+  --bs-primary-text-emphasis: rgb(208.8, 122.4, 122.4);
   --bs-secondary-text-emphasis: rgb(128.4, 128.4, 128.4);
   --bs-success-text-emphasis: rgb(117, 183, 152.4);
   --bs-info-text-emphasis: rgb(109.8, 223.2, 246);
@@ -139,7 +139,7 @@
   --bs-danger-text-emphasis: rgb(234, 133.8, 143.4);
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
-  --bs-primary-bg-subtle: rgb(37, 27.8, 26);
+  --bs-primary-bg-subtle: rgb(35.6, 6.8, 6.8);
   --bs-secondary-bg-subtle: rgb(8.8, 8.8, 8.8);
   --bs-success-bg-subtle: rgb(5, 27, 16.8);
   --bs-info-bg-subtle: rgb(2.6, 40.4, 48);
@@ -147,7 +147,7 @@
   --bs-danger-bg-subtle: rgb(44, 10.6, 13.8);
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
-  --bs-primary-border-subtle: rgb(111, 83.4, 78);
+  --bs-primary-border-subtle: rgb(106.8, 20.4, 20.4);
   --bs-secondary-border-subtle: rgb(26.4, 26.4, 26.4);
   --bs-success-border-subtle: rgb(15, 81, 50.4);
   --bs-info-border-subtle: rgb(7.8, 121.2, 144);
@@ -156,10 +156,10 @@
   --bs-light-border-subtle: #495057;
   --bs-dark-border-subtle: #343a40;
   --bs-heading-color: inherit;
-  --bs-link-color: rgb(213, 185.4, 180);
-  --bs-link-hover-color: rgb(221.4, 199.32, 195);
-  --bs-link-color-rgb: 213, 185, 180;
-  --bs-link-hover-color-rgb: 221, 199, 195;
+  --bs-link-color: rgb(208.8, 122.4, 122.4);
+  --bs-link-hover-color: rgb(218.04, 148.92, 148.92);
+  --bs-link-color-rgb: 209, 122, 122;
+  --bs-link-hover-color-rgb: 218, 149, 149;
   --bs-code-color: rgb(230.4, 132.6, 181.2);
   --bs-highlight-color: #dee2e6;
   --bs-highlight-bg: rgb(102, 77.2, 2.8);
@@ -1920,13 +1920,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: rgb(241, 231.8, 230);
-  --bs-table-border-color: rgb(192.8, 185.44, 184);
-  --bs-table-striped-bg: rgb(228.95, 220.21, 218.5);
+  --bs-table-bg: rgb(239.6, 210.8, 210.8);
+  --bs-table-border-color: rgb(191.68, 168.64, 168.64);
+  --bs-table-striped-bg: rgb(227.62, 200.26, 200.26);
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: rgb(216.9, 208.62, 207);
+  --bs-table-active-bg: rgb(215.64, 189.72, 189.72);
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: rgb(222.925, 214.415, 212.75);
+  --bs-table-hover-bg: rgb(221.63, 194.99, 194.99);
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2124,9 +2124,9 @@ progress {
 .form-control:focus {
   color: var(--bs-body-color);
   background-color: var(--bs-body-bg);
-  border-color: rgb(220, 197, 192.5);
+  border-color: rgb(216.5, 144.5, 144.5);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   min-width: 85px;
@@ -2269,9 +2269,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: rgb(220, 197, 192.5);
+  border-color: rgb(216.5, 144.5, 144.5);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2353,13 +2353,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: rgb(220, 197, 192.5);
+  border-color: rgb(216.5, 144.5, 144.5);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
 }
 .form-check-input:checked {
-  background-color: #B98B82;
-  border-color: #B98B82;
+  background-color: #B22222;
+  border-color: #B22222;
 }
 .form-check-input:checked[type=checkbox] {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2368,8 +2368,8 @@ textarea.form-control-lg {
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #B98B82;
-  border-color: #B98B82;
+  background-color: #B22222;
+  border-color: #B22222;
   --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2400,7 +2400,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgb%28220, 197, 192.5%29'/%3e%3c/svg%3e");
+  --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgb%28216.5, 144.5, 144.5%29'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2446,10 +2446,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2459,7 +2459,7 @@ textarea.form-control-lg {
   height: 1rem;
   margin-top: -0.25rem;
   appearance: none;
-  background-color: #B98B82;
+  background-color: #B22222;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2470,7 +2470,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: rgb(234, 220.2, 217.5);
+  background-color: rgb(231.9, 188.7, 188.7);
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2485,7 +2485,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   appearance: none;
-  background-color: #B98B82;
+  background-color: #B22222;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2496,7 +2496,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: rgb(234, 220.2, 217.5);
+  background-color: rgb(231.9, 188.7, 188.7);
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2957,20 +2957,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #B98B82;
-  --bs-btn-border-color: #B98B82;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: rgb(195.5, 156.4, 148.75);
-  --bs-btn-hover-border-color: rgb(192, 150.6, 142.5);
-  --bs-btn-focus-shadow-rgb: 157, 118, 111;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: rgb(199, 162.2, 155);
-  --bs-btn-active-border-color: rgb(192, 150.6, 142.5);
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #B22222;
+  --bs-btn-border-color: #B22222;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(151.3, 28.9, 28.9);
+  --bs-btn-hover-border-color: rgb(142.4, 27.2, 27.2);
+  --bs-btn-focus-shadow-rgb: 190, 67, 67;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(142.4, 27.2, 27.2);
+  --bs-btn-active-border-color: rgb(133.5, 25.5, 25.5);
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #B98B82;
-  --bs-btn-disabled-border-color: #B98B82;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #B22222;
+  --bs-btn-disabled-border-color: #B22222;
 }
 
 .btn-complement {
@@ -3008,19 +3008,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #B98B82;
-  --bs-btn-border-color: #B98B82;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #B98B82;
-  --bs-btn-hover-border-color: #B98B82;
-  --bs-btn-focus-shadow-rgb: 185, 139, 130;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #B98B82;
-  --bs-btn-active-border-color: #B98B82;
+  --bs-btn-color: #B22222;
+  --bs-btn-border-color: #B22222;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #B22222;
+  --bs-btn-hover-border-color: #B22222;
+  --bs-btn-focus-shadow-rgb: 178, 34, 34;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #B22222;
+  --bs-btn-active-border-color: #B22222;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #B98B82;
+  --bs-btn-disabled-color: #B22222;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #B98B82;
+  --bs-btn-disabled-border-color: #B22222;
   --bs-gradient: none;
 }
 
@@ -3070,7 +3070,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: 0 0 0 #000;
-  --bs-btn-focus-shadow-rgb: 157, 118, 111;
+  --bs-btn-focus-shadow-rgb: 190, 67, 67;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3177,7 +3177,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: var(--bs-body-color);
   --bs-dropdown-link-hover-bg: var(--bs-tertiary-bg);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #B98B82;
+  --bs-dropdown-link-active-bg: #B22222;
   --bs-dropdown-link-disabled-color: var(--bs-tertiary-color);
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3443,7 +3443,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #B98B82;
+  --bs-dropdown-link-active-bg: #B22222;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3583,7 +3583,7 @@ textarea.form-control-lg {
 }
 .nav-link:focus-visible {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
 }
 .nav-link.disabled, .nav-link:disabled {
   color: var(--bs-nav-link-disabled-color);
@@ -3626,7 +3626,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: var(--bs-border-radius);
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #B98B82;
+  --bs-nav-pills-link-active-bg: #B22222;
 }
 .nav-pills .nav-link {
   border-radius: var(--bs-nav-pills-border-radius);
@@ -4313,8 +4313,8 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='rgb%2874, 55.6, 52%29' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='rgb%2871.2, 13.6, 13.6%29' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: var(--bs-primary-text-emphasis);
@@ -4431,8 +4431,8 @@ textarea.form-control-lg {
 }
 
 [data-bs-theme=dark] .accordion-button::after {
-  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='rgb%28213, 185.4, 180%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='rgb%28213, 185.4, 180%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='rgb%28208.8, 122.4, 122.4%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='rgb%28208.8, 122.4, 122.4%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
 .breadcrumb {
@@ -4481,10 +4481,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: var(--bs-border-color);
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: var(--bs-secondary-bg);
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #B98B82;
-  --bs-pagination-active-border-color: #B98B82;
+  --bs-pagination-active-bg: #B22222;
+  --bs-pagination-active-border-color: #B22222;
   --bs-pagination-disabled-color: var(--bs-secondary-color);
   --bs-pagination-disabled-bg: var(--bs-secondary-bg);
   --bs-pagination-disabled-border-color: var(--bs-border-color);
@@ -4661,7 +4661,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: var(--bs-border-radius);
   --bs-progress-box-shadow: var(--bs-box-shadow-inset);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #B98B82;
+  --bs-progress-bar-bg: #B22222;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -4726,8 +4726,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: var(--bs-secondary-color);
   --bs-list-group-disabled-bg: var(--bs-body-bg);
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #B98B82;
-  --bs-list-group-active-border-color: #B98B82;
+  --bs-list-group-active-bg: #B22222;
+  --bs-list-group-active-border-color: #B22222;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -4993,7 +4993,7 @@ textarea.form-control-lg {
   --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
   --bs-btn-close-opacity: 0.5;
   --bs-btn-close-hover-opacity: 0.75;
-  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(185, 139, 130, 0.25);
+  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(178, 34, 34, 0.25);
   --bs-btn-close-focus-opacity: 1;
   --bs-btn-close-disabled-opacity: 0.25;
   --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
@@ -6467,7 +6467,7 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #000 !important;
+  color: #fff !important;
   background-color: RGBA(var(--bs-primary-rgb), var(--bs-bg-opacity, 1)) !important;
 }
 
@@ -6486,8 +6486,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-primary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: RGBA(199, 162, 155, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(199, 162, 155, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(142, 27, 27, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(142, 27, 27, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-complement {
