--- a/scss/main.scss
+++ b/scss/main.scss
@@ -121,6 +121,39 @@ a {
 }
 
 
+/* Swiper class */
+.swiper-button-prev:after,
+.swiper-button-next:after {
+    // content: "" !important; 
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+    background-color: $white;
+    color: $primary;
+    width: initial;
+    height: initial;
+    font-size: 2rem !important;
+    display: none;
+    padding: .2rem;
+
+    @include media-breakpoint-up(lg) {
+        display: block;
+
+    }
+}
+
+.swiper-pagination-bullet {
+    background-color: hsl(212, 32%, 40%) m !important;
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: $primary !important;
+}
+
+
+
 // End Generico
 
 
@@ -219,6 +252,13 @@ a {
     .card {
         border: none;
         height: 400px; // Altura de la tarjeta
+
+        img {
+            width: 100%;
+            height: 250px;
+        }
+
+
     }
 
     .card-img-top {
@@ -238,7 +278,7 @@ a {
 
     .control {
         width: auto;
-        box-shadow: rgba(44, 44, 44, 0.3) 0px 0px 0px 3px;
+        // box-shadow: rgba(44, 44, 44, 0.3) 0px 0px 0px 3px;
         //box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
         // box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
         //box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
