--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,6 +65,10 @@ a {
 
 // Generico
 
+.py-7{
+    padding: 64px 0;
+}
+
 .object-fit {
     height: 300px;
     min-width: 100%;
@@ -188,6 +192,7 @@ a {
 
 .header {
 
+    // margin-top: 80px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.1)), url(./../img/hamburger.jpg);
     background-repeat: no-repeat;
     background-position: center;
